# AgenticModelling

./: .gitignore  README.md
RLI_agent/: conversion_result.txt  convert_glb_to_3dm.py  firebase-config.json  pyproject.toml
RLI_agent/files/plans/: plan_20251214_ring_marquise.md  plan_20251214_ring_redesign.md  plan_20251214_ringmod.md
RLI_agent/rli_agent/: __init__.py  agent.py  config.py  server.py
RLI_agent/rli_agent/prompts/: file_converter.txt  image_generator.txt  model_extractor.txt  orchestrator.txt  planner.txt  researcher.txt  video_generator.txt  video_prompter.txt
RLI_agent/rli_agent/tools/: __init__.py  converter_tool.py  fal_tool.py  firebase_tool.py  gemini_tool.py  runway_tool.py
RLI_agent/rli_agent/utils/: __init__.py  event_emitter.py  message_handler.py  subagent_tracker.py
cephon/: package-lock.json  package.json  pnpm-lock.yaml
cephon/src/app/: globals.css  layout.tsx  page.tsx
cephon/src/app/api/post-job/: route.ts
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentFlow.tsx  ChatInput.tsx  FileChips.tsx  SidePanel.tsx
frontend/components/nodes/: AgentNode.tsx  ToolNode.tsx
frontend/components/tabs/: AgentFlowTab.tsx  DeliverablesTab.tsx
frontend/hooks/: useAgentWebSocket.ts
frontend/store/: agentStore.ts  sessionStore.ts
frontend/types/: agent.ts  events.ts
